--- a/views/attendance/attendance.ejs
+++ b/views/attendance/attendance.ejs
@@ -2,11 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Media Center</title>
+    <title>Attendance</title>
   </head>
   <center>
-  <h1>Media Center</h1>
-</center>
+    <h1>Attendance</h1>
+  </center>
   <body>
 
   </body>
