--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,9 @@
     <title>York County School of Technology | Home</title>
   </head>
   <body>
-
+    <center>
+      <h1>York County School of Technology</h1>
+    </center>
 
     <center>Spartan Mission</center>
     <center>The York County School of Technology is dedicated to providing high quality, dynamic academic and technical education for students, </center>
