--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,22 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>York County School of Technology | Home</title>
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <center>
-      <h1>York County School of Technology</h1>
-    </center>
+    <p>1</p>
+    <p>2</p>
+    <p>3</p>
+    <p>4</p>
+    <p>5</p>
 
-    <center>Spartan Mission</center>
-    <center>The York County School of Technology is dedicated to providing high quality, dynamic academic and technical education for students, </center>
-    <center>emphasizing professional skills while fostering the development of compassionate, lifelong learners who appreciate unique differences of other individuals and cultures. </center>
-    <br>
-    <center>Spartan Values</center>
-    <center>Professionalism: Spartans are on time, prepared and engaged.</center>
-    <center>Empathy: Spartans are kind, understanding and supportive.</center>
-    <center>Innovation: Spartans are bold and creative problem solvers.</center>
-    <center>Optimism: Spartans are positive, constructive and helpful.</center>
-    <center>Integrity: Spartans are honest, trustworthy and responsible.</center>
-    <center>Perseverance: Spartans are steadfast in the pursuit of success.</center>
+
+
+
   </body>
 </html>
