--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,14 +6,62 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <p>1</p>
-    <p>2</p>
-    <p>3</p>
-    <p>4</p>
-    <p>5</p>
+
+
+<h1>York County School of Technology</h1>
+
+
+<video controls width="400"><source src="videos/test1.mp4" type="video/mp4"> </video>
+
+</video>
 
 
 
+<form class="" action="/parents" method="get">
+  <button type="submit" class="button" name="button">Parents and Caregivers</button>
+</form>
+<br>
 
+<form class="" action="/senior_info" method="get">
+  <button type="submit" class="button" name="button">Senior Class Information</button>
+</form>
+<br>
+
+<form class="" action="/attendance" method="get">
+  <button type="submit" class="button" name="button">Student Attendance</button>
+</form>
+<br>
+
+<form class="" action="/media_center" method="get">
+  <button type="submit" class="button" name="button">Media Center</button>
+</form>
+<br>
+
+<form class="" action="/athlete" method="get">
+  <button type="submit" class="button" name="button">For Athletes</button>
+</form>
+<br>
+
+<form class="" action="/jobs" method="get">
+  <button type="submit" class="button" name="button">Jobs Posting Center</button>
+</form>
+<br>
+
+<form class="" action="operating_comitee" method="get">
+  <button type="submit" class="button" name="button">JOC Center</button>
+</form>
+<br>
+
+<form class="" action="/staff" method="get">
+  <button type="submit" class="button" name="button">Staff Members</button>
+</form>
+<br>
   </body>
 </html>
+<center>
+<p>High School Office: 717-741-0820 | Fax: 717-741-0694 | Adult Education: 717-747-2130</p>
+<center>
+<p>2179 South Queen Street, York Pennsylvania, 17402</p>
+</center>
+
+</center>
