--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,13 +1,32 @@
-body{
+body {
     background-color: #009645;
+
+}
+
+button {
+  position: relative; bottom: -150px;
+  background-color: white;
+  border: none;
+  border-radius: 10px;
+  padding: 10px;
+  width: 100px;
+  height: 50px;
+}
+
+h1 {
+  color: white;
+  padding: 10px;
+  border-style: solid;
+  border-color: black;
+  border-radius: 10px;
+  border-length: 10px;
+  width: 500px;
 }
 
 p {
-  margin-top: 100px;
-  color: white;
-  border-radius: 5px
-}
-
-div {
-  border: 15px solid black;
+  border: solid;
+  width: 150px;
+  height: 50px;
+  display: inline;
+  position: relative; bottom:-175px;
 }
