--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,11 +9,13 @@
 
 
 <h1>York County School of Technology</h1>
+<h2>Main Information</h2>
 
 
-
-
-
+<form class="" action="/" method="get">
+  <button type="submit" name="button">Home</button>
+</form>
+<br>
 
 <form class="" action="/parents" method="get">
   <button type="submit" class="button" name="button">Parents and Caregivers</button>
@@ -62,5 +64,11 @@
   <br>
 <p>2179 South Queen Street, York Pennsylvania, 17402</p>
 </center>
+
+
+
+
+
+<canvas id="canvas" width="600" height="800" style=" background-color: white; border:10px solid;"><p>Hello There</p></canvas>
 
 </center>
