--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,6 @@
 
 
 <h1>York County School of Technology</h1>
-<h2>Main Information</h2>
 
 
 <form class="" action="/" method="get">
@@ -65,10 +64,10 @@
 <p>2179 South Queen Street, York Pennsylvania, 17402</p>
 </center>
 
+<div class="mainInfo">
+  <h1>Main Information</h1>
+</div>
 
 
-
-
-<canvas id="canvas" width="600" height="800" style=" background-color: white; border:10px solid;"><p>Hello There</p></canvas>
 
 </center>
