--- a/views/attendance.ejs
+++ b/views/attendance.ejs
@@ -2,27 +2,53 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Student Attendance | York County School of Technology</title>
   </head>
   <body>
-    <form class="" action="/parents" method="get">
-      <input type="submit" name="" value="For Parents and Caregivers">
+    <form class="" action="/" method="get">
+      <button type="submit" name="button">Home</button>
     </form>
+    <br>
 
+    <form class="" action="/parents" method="get">
+      <button type="submit" class="button" name="button">Parents and Caregivers</button>
+    </form>
+    <br>
 
     <form class="" action="/senior_info" method="get">
-      <input type="submit" name="" value="Senior Class Information">
+      <button type="submit" class="button" name="button">Senior Class Information</button>
     </form>
-
+    <br>
 
     <form class="" action="/attendance" method="get">
-      <input type="submit" name="" value="Student Attendance">
+      <button type="submit" class="button" name="button">Student Attendance</button>
     </form>
-
+    <br>
 
     <form class="" action="/media_center" method="get">
-      <input type="submit" name="" value="Media Center">
+      <button type="submit" class="button" name="button">Media Center</button>
     </form>
+    <br>
+
+    <form class="" action="/athlete" method="get">
+      <button type="submit" class="button" name="button">For Athletes</button>
+    </form>
+    <br>
+
+    <form class="" action="/jobs" method="get">
+      <button type="submit" class="button" name="button">Jobs Posting Center</button>
+    </form>
+    <br>
+
+    <form class="" action="operating_comitee" method="get">
+      <button type="submit" class="button" name="button">JOC Center</button>
+    </form>
+    <br>
+
+    <form class="" action="/staff" method="get">
+      <button type="submit" class="button" name="button">Staff Members</button>
+    </form>
+    <br>
 
   </body>
 </html>
