--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>York County School of Technology | Home</title>
+    <title>Home | York County School of Technology</title>
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
