--- a/views/staff.ejs
+++ b/views/staff.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Staff Members | York County School of Technology</title>
+    <link rel="stylesheet" href="css/secondary.css">
   </head>
   <body>
     <form class="" action="/" method="get">
