--- a/views/seniorinfo.ejs
+++ b/views/seniorinfo.ejs
@@ -5,6 +5,7 @@
     <title>Senior Information | York County School of Technology</title>
     <link rel="stylesheet" href="css/secondary.css">
   </head>
+  <h1>York County School of Technology</h1>
   <body>
     <form class="" action="/" method="get">
       <button type="submit" name="button">Home</button>
