--- a/views/athlete.ejs
+++ b/views/athlete.ejs
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="css/secondary.css">
   </head>
   <body>
+    <h1>York County School of Technology</h1>
+
     <form class="" action="/" method="get">
       <button type="submit" name="button">Home</button>
     </form>
@@ -15,7 +17,7 @@
       <button type="submit" class="button" name="button">Parents and Caregivers</button>
     </form>
     <br>
-    
+
     <form class="" action="/senior_info" method="get">
       <button type="submit" class="button" name="button">Senior Class Information</button>
     </form>
