--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,9 @@
 
 <h1>York County School of Technology</h1>
 
+<div class="video">
+  <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/_fhDVVfELsM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
 <form class="" action="/" method="get">
   <button type="submit" name="button">Home</button>
@@ -57,17 +60,22 @@
 <br>
   </body>
 </html>
+
+
 <center>
-<p>High School Office: 717-741-0820 | Fax: 717-741-0694 | Adult Education: 717-747-2130</p>
-<center>
-  <br>
-<p>2179 South Queen Street, York Pennsylvania, 17402</p>
+ <div class="contactInfo">
+   <p>High School Office: 717-741-0820 | Fax: 717-741-0694 | Adult Education: 717-747-2130</p>
+   <center>
+     <br>
+   <p>2179 South Queen Street, York Pennsylvania, 17402</p>
+ </div>
 </center>
+
 
 <div class="mainInfo">
   <h1>Main Information</h1>
+  <h2>Hello, this is very important</h2>
 </div>
-
 
 
 </center>
