--- a/views/staff.ejs
+++ b/views/staff.ejs
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/secondary.css">
   </head>
   <body>
+    <h1>York County School of Technology</h1>
     <form class="" action="/" method="get">
       <button type="submit" name="button">Home</button>
     </form>
