--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
 <h1>York County School of Technology</h1>
 
 <div class="video">
-  <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/_fhDVVfELsM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/chWWLsSAqYU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 <form class="" action="/" method="get">
