--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,8 @@
 
 <h1>York County School of Technology</h1>
 
+
+<!--youtube video/livestream -->
 <div class="video">
   <iframe width="560" height="315" src="https://www.youtube.com/embed/chWWLsSAqYU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
@@ -62,6 +64,8 @@
 </html>
 
 
+
+<!--contact info-->
 <center>
  <div class="contactInfo">
    <p>High School Office: 717-741-0820 | Fax: 717-741-0694 | Adult Education: 717-747-2130</p>
@@ -71,7 +75,7 @@
  </div>
 </center>
 
-
+<!--important update info-->
 <div class="mainInfo">
   <h1>Main Information</h1>
   <h2>Hello, this is very important</h2>
