--- a/views/database.ejs
+++ b/views/database.ejs
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>operating comitee | York County School of Technology</title>
+    <title>Database | York County School of Technology</title>
     <link rel="stylesheet" href="css/secondary.css">
   </head>
   <body>
@@ -52,5 +52,6 @@
       <button type="submit" class="button" name="button">Staff Members</button>
     </form>
     <br>
+
   </body>
 </html>
