--- a/views/databaseUsage.ejs
+++ b/views/databaseUsage.ejs
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>operating comitee | York County School of Technology</title>
+    <title>Database Usage | York County School of Technology</title>
     <link rel="stylesheet" href="css/secondary.css">
   </head>
   <body>
