--- a/views/specialReleaseSpanish.ejs
+++ b/views/specialReleaseSpanish.ejs
@@ -2,11 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>operating comitee | York County School of Technology</title>
+    <title>Special Release English | York County School of Technology</title>
     <link rel="stylesheet" href="css/secondary.css">
   </head>
   <body>
-
     <h1>York County School of Technology</h1>
     <form class="" action="/" method="get">
       <button type="submit" name="button">Home</button>
