--- a/views/parents.ejs
+++ b/views/parents.ejs
@@ -6,8 +6,59 @@
     <link rel="stylesheet" href="css/secondary.css">
   </head>
   <body>
+         
+
 
     <h1>York County School of Technology</h1>
+
+    <center>
+      <h1>Parents/Caregivers Recources</h1>
+      <h2>What Information Can I Access?</h2>
+      <p>-Mandatory form completion: Demographics, Acceptable Use Policy, Health Form, Student Handbook Sign off</p>
+      <p>-Absence Reporting:You can submit and view absence requests</p>
+      <p>-Fees: You can view fees and payments</p>
+      <p>-Food Service: Allows you to see transactions and make payments towards your student’s lunch account</p>
+      <p>-Grades: Both academic history and current</p>
+      <p>-Health: You can view your student’s current conditions</p>
+      <p>Schedules: Your students daily courses</p>
+      <p>-Staff Directory: Allows you to send emails to your student’s teachers</p>
+      <p>-Transportation: You can view bus stop location and time of pick up </p>
+      <p></p>
+      <p></p>
+      <p></p>
+      <p></p>
+      <p></p>
+      <p></p>
+      <p></p>
+      <p></p>
+      <p></p>
+      <p></p>
+      <p></p>
+      <p></p>
+      <p></p>
+      <p></p>
+      <p></p>
+      <p></p>
+      <p></p>
+      <p></p>
+      <p></p>
+      <p></p>
+      <p></p>
+
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    </center>
+
+
+
     <form class="" action="/" method="get">
       <button type="submit" name="button">Home</button>
     </form>
@@ -52,5 +103,8 @@
       <button type="submit" class="button" name="button">Staff Members</button>
     </form>
     <br>
+
+
+
   </body>
 </html>
