continued parents and caregivers page

--- a/views/parents.ejs
+++ b/views/parents.ejs
@@ -23,38 +23,18 @@
       <p>Schedules: Your students daily courses</p>
       <p>-Staff Directory: Allows you to send emails to your student’s teachers</p>
       <p>-Transportation: You can view bus stop location and time of pick up </p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
+      <h2>How do I gain access?</h2>
+      <p>By having a student already enrolled at York Tech you automatically have an account</p>
+      <p>Parents of a new student, you will use the same username and password that you created when completing your students online application</p>
+      <p>SKYWARD LINK</p>
+      <p>If you do not know your username and password, please select forgot username and password link. then type in your email address and the information will be sent to your email shortly</p>
+      <h2>What information do I access here?</h2>
+      <p>you can see all of your students classes in one place</p>
+      <p>you can easily access course assignments</p>
+      <p>view due dates for assignments, quizzes, and tests</p>
+      <p>view important announcements from your students teachers</p>
+      <p>send messages to your students teachers</p>
+ 
     </center>
 
 
