more info brought over

--- a/views/attendance.ejs
+++ b/views/attendance.ejs
@@ -7,6 +7,21 @@
   </head>
   <body>
 
+      <center>
+        <h1>Attendance</h1>
+        <br>
+        <h2>ONLINE Attendance Reporting</h2>
+        <p>Login to your Skyward Family Access Portal to report your childs absence</p>
+        <p>If you are unable to access yout Skyward Portal, please call our attendance hotline (voicemail only) </p>
+        <p>at 717-505-4744</p>
+        <p>If you have reported your student absent via phone call or online form, you do NOT need to send in an excuse form to the school</p>
+      </center>
+
+
+
+
+
+
     <h1>York County School of Technology</h1>
     <form class="" action="/" method="get">
       <button type="submit" name="button">Home</button>
