--- a/views/seniorinfo.ejs
+++ b/views/seniorinfo.ejs
@@ -7,6 +7,23 @@
   </head>
   <h1>York County School of Technology</h1>
   <body>
+
+<center>    
+  <h2>Class Of 2023 Advisors</h2>
+  <p>Jen Smith</p>
+  <p>jensmith@ytech.edu</p>
+
+  <h2>Class of 2023 Senior Photos</h2>
+  <p>Rescheduled picture day is September 30. Five photographers on hand. Each student WILL recieve one free 8x10</p>
+</center>
+
+
+
+
+
+
+
+
     <form class="" action="/" method="get">
       <button type="submit" name="button">Home</button>
     </form>
