home page started

--- a/NewSite/views/login.ejs
+++ b/NewSite/views/login.ejs
@@ -5,10 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Ytech | Home</title>
 </head>
 
 <body>
+
+
+
+    <center>
+        <h1>York County School of Technology</h1>
+    </center>
+    
+    <form action="/mediacenter/mediacenter.ejs" method="get">
+        <input type="submit" name="" value="Media Center" id="">
+    </form>
+    
+    <form action=""></form>
+    <form action=""></form>
+
+
+
+
+
     <form action="/login" method="post" autocomplete='on'>
         <div>
             <span>Username</span>
@@ -22,6 +40,14 @@
     </form>
     <a href="/">home</a>
     <a href="/signup">Signup</a>
-</body>
 
+
+
+
+
+
+
+
+
+</body>
 </html>
