--- a/newsiteproposal/views/home.ejs
+++ b/newsiteproposal/views/home.ejs
@@ -9,20 +9,21 @@
 </head>
 <body>
     
-    <img src="assets/spartanLogo.png" alt="">
+    <img src="imgs/spartanLogo.png" alt="">
 
 
 
     <h1>York County School of Technology</h1>
 
-
-    <div class="info">
-        <h3>Announcements</h3>
-        <p>lorem ipsum lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
-        <br>
-        <h3>Important Info</h3>
-        <p>lorem ipsum lorem ipsumlorem ipsumlorem lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
-    </div>
+    <center>
+        <div class="info">
+            <h3>Announcements</h3>
+            <p>lorem ipsum lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
+            <br>
+            <h3>Important Info</h3>
+            <p>lorem ipsum lorem ipsumlorem ipsumlorem lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
+        </div>    
+    </center>
 
 
 
@@ -30,23 +31,23 @@
     <div class="mainButtons">
 
         <form action="/" method="get">
-            <button type="submit">Home</button>
+            <button class="submitButton" type="submit">Home</button>
+        </form>
+        <br>
+        <form action="/MediaCenter" method="get">
+            <button class="submitButton" type="submit">Media Center</button>
         </form>
         <br>
         <form action="/" method="get">
-            <button type="submit"></button>
+            <button class="submitButton" type="submit"></button>
         </form>
         <br>
         <form action="/" method="get">
-            <button type="submit"></button>
+            <button class="submitButton" type="submit"></button>
         </form>
         <br>
         <form action="/" method="get">
-            <button type="submit"></button>
-        </form>
-        <br>
-        <form action="/" method="get">
-            <button type="submit"></button>
+            <button class="submitButton" type="submit"></button>
         </form>
 
     </div>
