added small quality of life changes
added two links. One being schoology, one being Skyward

--- a/static/styles.css
+++ b/static/styles.css
@@ -19,4 +19,18 @@
         margin-left: 15px;
 }
 
+.header-links {
+    text-align: right;
+    float: right;
+}
+
+a:link {
+    background-color: transparent; 
+    text-decoration: none;
+}
+
+a:hover {
+    background-color: transparent;
+    text-decoration: underline;
+}
 
