--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -6,6 +6,10 @@
         <div class="header-container">
             <img class="header-img" src="imgs\Spart.png" alt="">
             <h1 class="header-h1">York County School Of Technology</h1>
+            <div class="header-links">
+                <a href="https://skyward.iscorp.com/YorkTechPAStuSTS/Session/" style="color: black;">Skyward</a> <br>
+                <a href="https://schoology.ytech.edu/home" style="color: Black;">Schoology</a>
+            </div>
         </div>
     </body>
 </html>
