--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -4,8 +4,11 @@
     </head>
     <body>
         <div class="header-container">
-            <img class="header-img" src="imgs\Spart.png" alt="">
-            <h1 class="header-h1">York County School Of Technology</h1>
+            <div>
+                <img class="header-img" src="imgs\Spart.png" alt="">
+                <h1 class="header-h1">York County School Of Technology</h1>
+            </div>
+
             <div class="header-links">
                 <a href="https://skyward.iscorp.com/YorkTechPAStuSTS/Session/" style="color: black;">Skyward</a> <br>
                 <a href="https://schoology.ytech.edu/home" style="color: Black;">Schoology</a>
