removed main buttons
-removed main buttons
-added mission statement
-created picture slideshow div tag

--- a/newsiteproposal/views/home.ejs
+++ b/newsiteproposal/views/home.ejs
@@ -13,12 +13,16 @@
 
 
 
+ 
     <h1>York County School of Technology</h1>
 
     <center>
         <div class="info">
             <h3>Announcements</h3>
             <p>lorem ipsum lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
+            
+
+
             <br>
             <h3>Important Info</h3>
             <p>lorem ipsum lorem ipsumlorem ipsumlorem lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
@@ -27,33 +31,18 @@
 
 
 
-
-    <div class="mainButtons">
-
-        <form action="/" method="get">
-            <button class="submitButton" type="submit">Home</button>
-        </form>
-        <br>
-        <form action="/MediaCenter" method="get">
-            <button class="submitButton" type="submit">Media Center</button>
-        </form>
-        <br>
-        <form action="/" method="get">
-            <button class="submitButton" type="submit"></button>
-        </form>
-        <br>
-        <form action="/" method="get">
-            <button class="submitButton" type="submit"></button>
-        </form>
-        <br>
-        <form action="/" method="get">
-            <button class="submitButton" type="submit"></button>
-        </form>
-
+    <div class="missionStatement">
+        <h3>Our Mission Statement!</h3>
+        <p>lorem ipsum lorem ipsum lorem ipsum lorem ipsumlorem ipsum lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
     </div>
 
 
-
+<center>
+    <div class="homePictures">
+        <p>Temp</p>
+    </div>
+</center>
+   
 
 
 
