--- a/newsiteproposal/static/home.css
+++ b/newsiteproposal/static/home.css
@@ -3,6 +3,9 @@ h1 {
     border: 3px;
     margin-top: 40px;
     margin-left: 15px;
+   
+    border-bottom: 3px solid black;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .info {
@@ -12,25 +15,34 @@ h1 {
     float:right;
     padding: 30px;
     margin: 30px;
+    margin-top: 150px;
     width: 250px;
 }
 
-.mainButtons{
-    float: left;
-    margin-top: 200px;
-    margin-right: 1300px;
-}
 
-.submitButton{
+.missionStatement {
     text-align: center;
-    width: 100px;
-    border-radius: 25px;
-    border: none;
-    background-color:  #009645;
-    
+    border-style: solid;
+    border-radius: 5px;
+    border-color: #009645;
+    float:left;
+    padding: 30px;
+    margin: 30px;
+    margin-top: 150px;
+    width: 250px;
 }
 
 
+
+
+
+.homePictures {
+    border-style: solid;
+    border-color: black;
+    border: 3px;
+    width: 150px;
+    height: 150px
+}
 
 
 
