--- a/newsiteproposal/static/home.css
+++ b/newsiteproposal/static/home.css
@@ -1,3 +1,6 @@
+
+
+/*title */
 h1 {
     float : left;
     border: 3px;
@@ -8,6 +11,8 @@ h1 {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+
+/*announcements and important info div box */
 .info {
     border-style: solid;
     border-radius: 5px;
