--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -14,5 +14,9 @@
                 <a href="https://schoology.ytech.edu/home" style="color: Black;">Schoology</a>
             </div>
         </div>
+        <div class="header-pages">
+            <a href="/" style="color: black; margin: 20px;">home </a>
+            <a href="/mc" style="color: black;">media center</a>
+        </div>
     </body>
 </html>
