--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -16,7 +16,7 @@
         </div>
         <div class="header-pages">
             <a href="/" style="color: black; margin: 20px;">home </a>
-            <a href="/mc" style="color: black;">media center</a>
+            <a href="/MediaCenter" style="color: black;">media center</a>
         </div>
     </body>
 </html>
