--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,50 +2,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <%- include('partials/_header') -%>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="home.css">
     <title>YTECH | Home</title>
 </head>
 <body>
     
-    <img src="imgs/spartanLogo.png" alt="">
-
-
-
- 
-    <h1>York County School of Technology</h1>
-
-    <center>
-        <div class="info">
-            <h3>Announcements</h3>
-            <p>lorem ipsum lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
-            
-
-
-            <br>
-            <h3>Important Info</h3>
-            <p>lorem ipsum lorem ipsumlorem ipsumlorem lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
-        </div>    
-    </center>
-
-
-
-    <div class="missionStatement">
-        <h3>Our Mission Statement!</h3>
-        <p>lorem ipsum lorem ipsum lorem ipsum lorem ipsumlorem ipsum lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
-    </div>
-
-
-<center>
-    <div class="homePictures">
-        <p>Temp</p>
-    </div>
-</center>
-   
-
-
+    
 
 
 
@@ -53,14 +18,7 @@
 
 
 </body>
-
+<%- include('partials/_footer') -%>
 <html>
-    <%- include('partials/_header') -%>
-
     
-    <head></head>
-    <body>
-        home menu
-    </body>
 
-</html>
