home page restarted yet again

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,15 +2,112 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <%- include('partials/_header') -%>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YTECH | Home</title>
+    <link rel="stylesheet" href="home.css">
 </head>
 <body>
     
+
+
+
+
     
+<h1>York County School of Technology</h1>
+
+<div class="mainButtons">
+
+
+<form action="/" method="get">
+    <button type="submit">Home</button>
+</form>
+<br>
+<form action="/MediaCenter" method="get">
+    <button type="submit">Media Center</button>
+</form>
+<br>
+<form action="/" method="get">
+    <button type="submit">N/A</button>
+</form>
+<br>
+<form action="/" method="get">
+    <button type="submit">N/A</button>
+</form>
+<br>
+<form action="/" method="get">
+    <button type="submit">N/A</button>
+</form>
+<br>
+<form action="/" method="get">
+    <button type="submit">N/A</button>
+</form>
+<br>
+<form action="/" method="get">
+    <button type="submit">N/A</button>
+</form>
+<br>
+<form action="/" method="get">
+    <button type="submit">N/A</button>
+</form>
+
+
+
+
+
+
+
+</div>
+
+
+<center>
+    <div class="mission">
+        <p>The mission of York County School of Technology's Media 
+            Center is to provide students and staff with the opportunity to become 
+            lifelong learners, users, and creators of concepts and philosophies. Our library vision is to 
+            ensure that students and staff are becoming proficient users of ideas and information; that students are 
+            empowered to be critical thinkers, passionate readers, skillful researchers, and that students and staff use that 
+            information ethically. The library will support our school's curriculum, through collaboration with teachers and students, 
+            by continuing to develop a collection that is representative of our school community, and by implementing literacy 
+            instruction for students, while creating a learning space that is safe and edifying to all.</p>
+    </div>
+</center>
+
+
+
+
+
+
+
+
+
+
+
+<div class="mainInfo">
+    <h3>Announcements</h3>
+    <p>-Lorem Ipsum</p>
+    <p>-Ipsum</p>
+
+
+
+
+    <h3>Quick Information</h3>
+    <p>-Lorem Ipsum</p>
+    <p>-Ipsum Ipsum</p>
+
+</div>
+
+
+
+<div class="quickLinks">
+    <a href="https://schoology.ytech.edu/login/ldap?&school=281446774">Schoology</a>
+    <br>
+    <a href="https://skyward.iscorp.com/YorkTechPAStuSTS/Session/Signin?area=Home&controller=StudentAccess&action=Home">Skyward</a>
+</div>
+
+
+
 
 
 
@@ -18,7 +115,6 @@
 
 
 </body>
-<%- include('partials/_footer') -%>
 <html>
     
 
