--- a/views/home.ejs
+++ b/views/home.ejs
@@ -63,6 +63,7 @@
 
 <center>
     <div class="mission">
+        <h1>Our Spartan Mission!</h1>
         <p>The mission of York County School of Technology's Media 
             Center is to provide students and staff with the opportunity to become 
             lifelong learners, users, and creators of concepts and philosophies. Our library vision is to 
@@ -85,14 +86,14 @@
 
 
 <div class="mainInfo">
-    <h3>Announcements</h3>
+    <h3>Announcements-</h3>
     <p>-Lorem Ipsum</p>
     <p>-Ipsum</p>
 
 
 
 
-    <h3>Quick Information</h3>
+    <h3>Quick Information-</h3>
     <p>-Lorem Ipsum</p>
     <p>-Ipsum Ipsum</p>
 
@@ -101,11 +102,16 @@
 
 
 <div class="quickLinks">
+    <h3>Quick Links-</h3>
     <a href="https://schoology.ytech.edu/login/ldap?&school=281446774">Schoology</a>
     <br>
     <a href="https://skyward.iscorp.com/YorkTechPAStuSTS/Session/Signin?area=Home&controller=StudentAccess&action=Home">Skyward</a>
+    <br>
+    <a href="">Calander (Work In Progress)</a>
 </div>
 
+
+<iframe src="22-23Calander.pdf" frameborder="0"></iframe>
 
 
 
