--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,10 +1,18 @@
 <html>
     <%- include('partials/_header') -%>
-
+    <link rel="stylesheet" href="home.css">
     
     <head></head>
     <body>
-        home menu
+        <div class="whyUs">
+            <h3>Why York Tech?</h3>
+        </div>
+        <div class="mainInfo"></div>
+        <div class="mainButtons"></div>
+        <div class="announcements"></div>
+        <div class="quickLinks"></div>
+       
+
     </body>
 
     <%- include('partials/_footer') -%>
