--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -15,7 +15,7 @@
             </div>
         </div>
         <div class="header-pages">
-            <a href="/" style="color: black; margin: 20px;">Home </a>
+            <a href="/" style="color: black;">Home </a>
             <a href="/mc" style="color: black; margin: 20px;">Media Center</a>
             <a href="/parents" style="color: black;">Parents And Caregivers</a>
         </div>
