--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,25 +4,33 @@
     
     <head></head>
     <body>
-        <div class="whyUs">
-            <h3>Why York Tech?</h3>
-        </div>
+
+
+        <center>
+            <div class="whyUs">
+                <u><h3>Why York Tech?</h3></u>
+                <p>spartan strong</p>
+            </div>
+        </center>
+       
+
+
 
         <div class="mainInfo">
             <h3>Information</h3>
+            <p>lorem ipsum</p>
+            <p>scree scree scree scree scree screescree scree screescreescree screescree</p>
         </div>
 
-
-
-        <div class="mainButtons"></div>
-        <div class="announcements"></div>
-        <div class="quickLinks"></div>
 
 
 
         <div class="announcements">
             <h3>Announcements</h3>
-          
+            <p>test</p>
+            <p>test 2</p>
+            <p>test 3</p>
+
         </div>
 
 
