--- a/static/home.css
+++ b/static/home.css
@@ -1,23 +1,28 @@
 .whyUs {
-
     text-align: center;
-
+    width: 400px;
 }
 
 
 .announcements {
+    float: right;
     text-align: center;
-    
+    width: 250px;
 }
 
 
 .quickLinks {
     text-align: center;
     width: 150px;
-    
-
     border: 3px;
     border-style: solid;
     border-color: black;
+    margin-bottom: 315px;
 
+}
+
+.mainInfo {
+    float: left;
+    text-align: center;
+    width: 250px;
 }
