--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,9 @@
 <html>
     <%- include('partials/_header') -%>
     <link rel="stylesheet" href="home.css">
-    
-    <head></head>
+    <head>
+        
+    </head>
     <body>
 
 
@@ -17,7 +18,7 @@
 
 
         <div class="mainInfo">
-            <h3>Information</h3>
+            <u><h3>Information</h3></u>
             <p>lorem ipsum</p>
             <p>scree scree scree scree scree screescree scree screescreescree screescree</p>
         </div>
@@ -26,7 +27,7 @@
 
 
         <div class="announcements">
-            <h3>Announcements</h3>
+            <u><h3>Announcements</h3></u>
             <p>test</p>
             <p>test 2</p>
             <p>test 3</p>
@@ -51,8 +52,5 @@
        
 
     </body>
-
     <%- include('partials/_footer') -%>
-
-    
 </html>
