--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,17 +2,16 @@
     <%- include('partials/_header') -%>
     <link rel="stylesheet" href="home.css">
     <head>
-        
+
     </head>
     <body>
-
 
         <center>
             <div class="whyUs">
                 <u><h3>Why York Tech?</h3></u>
                 <p>spartan strong</p>
             </div>
-        </center>
+      
        
 
 
@@ -35,9 +34,9 @@
         </div>
 
 
-        <center>
+            <br>
             <div class="quickLinks">
-                <h3>Quick Links</h3>
+                <u><h3>Quick Links</h3></u>
                 <a href="https://skyward.iscorp.com/YorkTechPAStuSTS/Session/">Skyward</a>
                 <br>
                 <a href="https://schoology.ytech.edu/login/ldap?destination=home&school=281446774">Schoology</a>
@@ -47,6 +46,9 @@
                 <a href="https://drive.google.com">Google Drive</a>
             </div>
         </center>
+  
+            
+    
       
 
        
