needed to change

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -16,7 +16,7 @@
         </div>
         <div class="header-pages">
             <a href="/" style="color: black;">Home </a>
-            <a href="/mc" style="color: black; margin: 20px;">Media Center</a>
+            <a href="/mediaCenter" style="color: black; margin: 20px;">Media Center</a>
             <a href="/parents" style="color: black;">Parents And Caregivers</a>
         </div>
     </body>
