--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,6 @@
 <html>
     <%- include('partials/_header') -%>
+    <!--<link rel="stylesheet" href="styles.css">-->
     <link rel="stylesheet" href="home.css">
     <head>
 
