--- a/static/styles.css
+++ b/static/styles.css
@@ -1,5 +1,4 @@
 
-/* header Styles */
 
 .Welcome {
     text-align: center;
@@ -36,27 +35,29 @@ font-size: medium;
     font-size: medium;
 }
 
+/* header Styles */
+
+
 .header-container {
     background-color: #009645;
     
-    padding-bottom: 22px;
+    padding-bottom: 42px;
     padding-top:1px;
+    padding-left: 10px;
     
 }
 
 .header-img {
     float: left;
+    padding-right: 10px;
 }
 
 .header-h1 {
-        float : left;
-        border: 3px;
-        border-style: solid;
-        border-color: #009645;
-        border-radius: 15px;
+        float: left;
         margin-top: 40px;
         margin-left: 15px;
-        padding-top: 50px
+        padding-top: 50px;
+          
 }
 
 .header-links {
@@ -65,7 +66,9 @@ font-size: medium;
     position: absolute;
     top: 15px;
     right: 15px;
+    
 }
+
 
 a:link {
     background-color: transparent; 
@@ -83,8 +86,10 @@ a:visited {
 }
 
 .header-pages {
-    background-color: gray;
+    background-color: #333;
     text-align: center;
+    
+    
 }
 
 /* body Styles */
