--- a/static/styles.css
+++ b/static/styles.css
@@ -24,6 +24,40 @@ font-size: large;
     font-size: large;
 }
 
+.four_it_shops {
+    width: 700px;
+    text-align: center;
+    font-size: large;
+}
+
+.whatwillilearn_it {
+    width: 700px;
+    text-align: center;
+    font-size: large;
+}
+
+.list_of_options {
+    font-size: large;
+}
+
+.Career_welcome {
+text-decoration: underline;
+font-size: x-large;
+}
+
+#Career_welcome_opening {
+    font-size: large;
+}
+
+#moreit_info {
+    font-size: large;
+}
+
+#four_it_shops {
+    font-size: medium;
+    
+}
+
 #gainaccessinfo {
 font-size: medium;
 }
@@ -131,3 +165,4 @@ footer {
     flex-grow: 1; /* This will make the spacer take up all the available space */
 
 }
+
