--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -15,9 +15,18 @@
             </div>
         </div>
         <div class="header-pages">
-            <a href="/" style="color: black; padding-left: 10px; padding-right: 10px; border-left: 1px solid; color: #fff;">Home</a>
-            <a href="/mc" style="color: black; padding-left: 10px; padding-right: 10px; border-left: 1px solid; color: #fff;">Media Center</a>
-            <a href="/parents" style="color: black; padding-left: 10px; padding-right: 10px; border-left: 1px solid; border-right: 1px solid; color: #fff;">Parents And Caregivers</a>
+            <a href="/" class="header-page">Home</a>
+            <a href="/mediaCenter" class="header-page">Media Center</a>
+            <a href="/parents" class="header-page">Parents And Caregivers</a>
         </div>
+
+        <script>
+        let headerLinks = document.getElementsByClassName('header-page')
+
+        for (let i = 0; i < headerLinks.length; i++) {
+            const links = headerLinks[i];
+            links.setAttribute("style", "padding-left: 10px; padding-right: 10px; border-left: 1px solid; color: #fff;")           
+        }
+        </script>
     </body>
 </html>
