--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -24,8 +24,15 @@
         let headerLinks = document.getElementsByClassName('header-page')
 
         for (let i = 0; i < headerLinks.length; i++) {
-            const links = headerLinks[i];
-            links.setAttribute("style", "padding-left: 10px; padding-right: 10px; border-left: 1px solid; color: #fff;")           
+
+            if (i != headerLinks.length - 1) {
+                const links = headerLinks[i];
+                links.setAttribute("style", "padding-left: 10px; padding-right: 10px; border-left: 1px solid; color: #fff;")   
+            } else if (i == headerLinks.length - 1) {
+                const links = headerLinks[i];
+                links.setAttribute("style", "padding-left: 10px; padding-right: 10px; border-left: 1px solid; border-right: 1px solid; color: #fff;")  
+            }
+                     
         }
         </script>
     </body>
