--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -15,10 +15,9 @@
             </div>
         </div>
         <div class="header-pages">
-
             <a href="/" class="header-page">Home</a>
             <a href="/mediaCenter" class="header-page">Media Center</a>
-            <a href="/parents" class="header-page">Parents And Caregivers</a
+            <a href="/parents" class="header-page">Parents And Caregivers</a>
 
         </div>
 
