--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,7 +18,7 @@
             <a href="/" class="header-page">Home</a>
             <a href="/mediaCenter" class="header-page">Media Center</a>
             <a href="/parents" class="header-page">Parents And Caregivers</a>
-
+            <a href="/athletics" class="header-page">Spartan Athletics</a>
         </div>
 
         <script>
