--- a/views/career_programs.ejs
+++ b/views/career_programs.ejs
@@ -27,7 +27,10 @@
 </center>
 <center>
 <div class="list_of_options">
-<li><a href="http://localhost:1010/it">Electronics/IT Support</a></li>
+<li><a href="http://localhost:1010/Hardware">Electronics/IT Support</a></li>
+<li><a href="http://localhost:1010/Programming">Computer Programming</a></li>
+<li><a href="http://localhost:1010/Networking">Networking and Cyber Security</a></li>
+<li><a href="http://localhost:1010/Software">Information System Management</a></li>
 </div>
 </center>
 </body>
