--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -19,6 +19,7 @@
             <a href="/" style="color: black; padding-left: 10px; padding-right: 10px; border-left: 1px solid; color: #fff;">Home</a>
             <a href="/mediaCenter" style="color: black; padding-left: 10px; padding-right: 10px; border-left: 1px solid; color: #fff;">Media Center</a>
             <a href="/parents" style="color: black; padding-left: 10px; padding-right: 10px; border-left: 1px solid; border-right: 1px solid; color: #fff;">Parents And Caregivers</a>
+            <a href="/career" style="color: black; padding-left: 10px; padding-right: 10px; border-left: 1px solid; border-right: 1px solid; color: #fff;">Career Options For Students</a>
             
 
         </div>
