--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,6 @@
 <html>
     <%- include('partials/_header') -%>
+    <!--<link rel="stylesheet" href="home.css">-->
     <link rel="stylesheet" href="styles.css">
     <head>
 
@@ -18,10 +19,8 @@
 
         <div class="mainInfo">
             <u><h3>Information</h3></u>
-            <p>2022-23 School Year Calender</p>
-            <p>Free and Reduced Lunch</p>
-            <p>Comcast Internet for Your Home</p>
-            <p>Tech Gear Online Store</p>
+            <p>lorem ipsum</p>
+            <p>scree scree scree scree scree screescree scree screescreescree screescree</p>
         </div>
 
 
@@ -29,9 +28,9 @@
 
         <div class="announcements">
             <u><h3>Announcements</h3></u>
-            <p>Parent Teacher Converences</p>
-            <p>Carrer Camp Summer 2023</p>
-            <p>York Tech Times Fall 2022</p>
+            <p>test</p>
+            <p>test 2</p>
+            <p>test 3</p>
 
         </div>
 
@@ -43,7 +42,7 @@
                 <br>
                 <a href="https://schoology.ytech.edu/login/ldap?destination=home&school=281446774">Schoology</a>
                 <br>
-                <a href="https://www.office.com/">Office 365</a>
+                <a href="">Office 365 (NO CURRENT LINK)</a>
                 <br>
                 <a href="https://drive.google.com">Google Drive</a>
             </div>
