Revert "Merge remote-tracking branch 'upstream/DEV' into DEV"
This reverts commit 301522fd574a84f0351ae5376052ed3411fd98d6, reversing
changes made to 21efe27190421fb005c76e1dda2aa24ad8e9cefc.

--- a/views/career_programs.ejs
+++ b/views/career_programs.ejs
@@ -27,10 +27,7 @@
 </center>
 <center>
 <div class="list_of_options">
-<li><a href="http://localhost:1010/Hardware">Electronics/IT Support</a></li>
-<li><a href="http://localhost:1010/Programming">Computer Programming</a></li>
-<li><a href="http://localhost:1010/Networking">Networking and Cyber Security</a></li>
-<li><a href="http://localhost:1010/Software">Information System Management</a></li>
+<li><a href="http://localhost:1010/it">Electronics/IT Support</a></li>
 </div>
 </center>
 </body>
