--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -19,6 +19,7 @@
             <a href="/mediaCenter" class="header-page">Media Center</a>
             <a href="/parents" class="header-page">Parents And Caregivers</a>
             <a href="/test" class="header-page">Test</a>
+            <a href="/career" class="header-page">Career Programs</a>
         </div>
 
         <script>
