--- a/static/styles.css
+++ b/static/styles.css
@@ -210,3 +210,17 @@ footer {
     background-color: #00953B;
 }
 
+
+
+
+
+/* athletics home page */
+.general {
+    border: 3px;
+    border-style: solid;
+    border-color: #00953B;
+    background-color: #00953B;
+
+    width: 400px;
+}
+
