--- a/views/athleticsHome.ejs
+++ b/views/athleticsHome.ejs
@@ -13,43 +13,46 @@
 
 
 <center>
-    <div class="spartanAthletics">
-        <h1>Spartan Athletics</h1>
-        <p>Athletic Director: Rob Caruso</p>
-        <p>Assistant Athletic Director: Open</p>
+
+
+    <div class="general">
+        <div class="spartanAthletics">
+            <h1>Spartan Athletics</h1>
+            <p>Athletic Director: Rob Caruso</p>
+            <p>Assistant Athletic Director: Open</p>
+        </div>
+    
+        <div class="specialAnnouncements">
+            <h1>Special Announcements</h1>
+        </div>
+       
+    
+        <div class="schedules">
+            <h1>Daily Sports Schedules</h1>
+            <a href="https://ytechspartans.bigteams.com/main/calendar">Calander</a>
+        </div>
+    
+        <div class="prices">
+            <h1>Event Admission Prices</h1>
+    
+            <h3>Varsity:</h3>
+            <p>Adults: $4.00</p>
+            <p>Students (K-12) $2.00</p>
+    
+            <h3>Freshman:</h3>
+            <p>Adults: $2.00</p>
+            <p>Students (K-12) $1.00</p>
+            
+            <h3>All Contestants:</h3>
+            <p>Senior Citizen $2.00</p>
+        </div>
     </div>
 
-    <div class="specialAnnouncements">
-        <h1>Special Announcements</h1>
-    </div>
-   
-
-    <div class="schedules">
-        <h1>Daily Sports Schedules</h1>
-    </div>
-
-    <div class="prices">
-        <h1>Event Admission Prices</h1>
-
-        <h3>Varsity:</h3>
-        <p>Adults: $4.00</p>
-        <p>Students (K-12) $2.00</p>
-
-        <h3>Freshman:</h3>
-        <p>Adults: $2.00</p>
-        <p>Students (K-12) $1.00</p>
-        
-        <h3>All Contestants:</h3>
-        <p>Senior Citizen $2.00</p>
-    </div>
 
 
 
 
-
-
-
-
+    
 
 
 
