--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,9 +29,11 @@
 
         <div class="announcements">
             <u><h3>Announcements</h3></u>
-            <p>Parent Teacher Converences</p>
-            <p>Carrer Camp Summer 2023</p>
-            <p>York Tech Times Fall 2022</p>
+            <a href="https://drive.google.com/file/d/1co_0aW1KTrQDb7td5nc4LJpPeQ3T1lHT/preview">Parent Teacher Conferences</a>
+            <br>
+            <a href="https://drive.google.com/file/d/1L2iEb9atNsXSZaN_yxu0dTfggvWkIAR6/preview">Career Camp: Summer 23</a>
+            <br>
+            <a href="https://enewspaper.makemynewspaper.com/03582eb5f49716/2022-12-05-o-#.Y-PEWK3MKUk">York Tech Times</a>
 
         </div>
 
